Add developer documentation and update plan

--- a/todo.txt
+++ b/todo.txt
@@ -14,10 +14,10 @@
 - Schriftgrößen flexibel einstellbar machen und darauf achten das sich alles fehlerfrei automatisch anpasst
 - Fixen
 - einfache verständliche und eindeutige sprache bei Hilfe oder Tips im Tool
-- Entwicklerdoku.md anlegen und ausbauen.
 - Vollautomatische Prüfungen und Selbstrepair einbauen
 - Komplett autonome Startprüfung mit autonomer, automatischer Korrektur von Problemen mit Nutzerfeedback
 
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
+- Entwicklerdoku.md angelegt
