--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,7 @@
 - Partabilität, Linuxkonforme Funktionen oder Ausgaben
 - Vereinheitlichte Benennung oder Aspekte im Tool benutzen auch bei Buttons etc globale Standards setzen
 - Fixen
-- Vollautomatische Prüfungen und Selbstrepair einbauen
+- Selbstreparatur einbauen
 - Komplett autonome Startprüfung mit autonomer, automatischer Korrektur von Problemen mit Nutzerfeedback
 
 ## Erledigte Aufgaben
@@ -21,3 +21,4 @@
 - Keine Links rechts scrollen im Tool, besser anordnen oder zweite Zeile verwenden, alles soll sichtbar sein
 - Globale Standards, Best Practices und Barrierefreiheit
 - einfache verständliche und eindeutige sprache bei Hilfe oder Tips im Tool
+- Vollautomatische Prüfungen einbauen
