--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,13 @@
-# Noch zu erledigen:
+# Todo-Liste
+
+## Offene Aufgaben
 - Code auf suboptimale strukturen und Aspekte analysieren und mit konsistenten, geprüften fehlerfreien Code ersetzen
 - Vereinheitlichte Benennung oder Aspekte im Tool benutzen auch bei Buttons etc globale Standards setzen
 - Fixen
-# # Final und vollständig abgeschlossen:
+
+## Erledigte Aufgaben
+- Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
-- fortschritt.txt angelegt und erste Fortschrittszeile ergänzt
 - Entwicklerdoku.md angelegt
 - jede Funktion mit Beschreibung, Tooltip und Hilfe mit Beispiel
 - Fenster flexibel in Größe machen und auch für kleine Bildschirme optimieren
