Add helpful defaults for input fields

--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 - grafische Interaktivität immer über Buttons oder Auswahldialoge
 - Vereinheitlichte Benennung oder Aspekte im Tool benutzen auch bei Buttons etc globale Standards setzen
 - Fixen
+- Weitere Eingabefelder auf sinnvolle Platzhalter und Standards prüfen
 
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
@@ -23,3 +24,4 @@
 - System Leistung und Ram schützen und Ressourcen schonen
 - Partabilität, Linuxkonforme Funktionen oder Ausgaben
 - grafische Interaktivität immer über Buttons oder Auswahldialoge
+- Platzhaltertexte und Standardwerte für Ausgabeordner und Audio-Bitrate ergänzt
