--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,6 @@
 
 ## Offene Aufgaben
 - Code auf suboptimale strukturen und Aspekte analysieren und mit konsistenten, geprüften fehlerfreien Code ersetzen
-- Vereinheitlichte Benennung oder Aspekte im Tool benutzen auch bei Buttons etc globale Standards setzen
 - Fixen
 
 ## Erledigte Aufgaben
@@ -24,3 +23,4 @@
 - grafische Interaktivität immer über Buttons oder Auswahldialoge
 - Platzhaltertexte und Standardwerte für Ausgabeordner und Audio-Bitrate ergänzt
 - Weitere Eingabefelder auf sinnvolle Platzhalter und Standards geprüft
+- Button-Benennungen vereinheitlicht
