--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 # Todo-Liste
 
 ## Offene Aufgaben
-- Code auf suboptimale strukturen und Aspekte analysieren und mit konsistenten, geprüften fehlerfreien Code ersetzen
 - Fixen
 
 ## Erledigte Aufgaben
@@ -24,3 +23,4 @@
 - Platzhaltertexte und Standardwerte für Ausgabeordner und Audio-Bitrate ergänzt
 - Weitere Eingabefelder auf sinnvolle Platzhalter und Standards geprüft
 - Button-Benennungen vereinheitlicht
+- Code auf suboptimale Strukturen geprüft; Audio-Bitrate validiert und Pixel-Einheiten ergänzt
