Simplify default handling for output and audio fields

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 # Todo-Liste
 
 ## Offene Aufgaben
-- Fixen
+- Tests für Platzhalter und Standardwerte ergänzen
 
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
@@ -24,3 +24,4 @@
 - Weitere Eingabefelder auf sinnvolle Platzhalter und Standards geprüft
 - Button-Benennungen vereinheitlicht
 - Code auf suboptimale Strukturen geprüft; Audio-Bitrate validiert und Pixel-Einheiten ergänzt
+- Ausgabeordner und Audio-Bitrate nutzen Standardwerte, wenn Felder leer bleiben
