Add input edge case tests and improve accessibility

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 # Todo-Liste
 
 ## Offene Aufgaben
-- Weitere Grenzfälle für Eingaben testen
+- (keine)
 
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
@@ -26,3 +26,4 @@
 - Code auf suboptimale Strukturen geprüft; Audio-Bitrate validiert und Pixel-Einheiten ergänzt
 - Ausgabeordner und Audio-Bitrate nutzen Standardwerte, wenn Felder leer bleiben
 - Tests für Platzhalter und Standardwerte ergänzen
+- Weitere Grenzfälle für Eingaben getestet
