--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,12 @@
 
 ## Offene Aufgaben
 - Weitere Einsparpotenziale bei Ressourcen prüfen
+- requirements.txt und pyproject.toml für Abhängigkeiten anlegen
+- Lizenzdatei (LICENSE) hinzufügen
+- Installationsanleitung im README erweitern
+- Automatische Tests über GitHub Actions einrichten
+- Code-Formatierung und -Prüfung mit pre-commit (z.B. black, ruff) ergänzen
+- Ausführbares Paket (z.B. mit PyInstaller) vorbereiten
 
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
