Improve error handling and remove placeholders

--- a/todo.txt
+++ b/todo.txt
@@ -36,3 +36,4 @@
 - Automatische Tests über GitHub Actions eingerichtet
 - pre-commit mit black und ruff ergänzt
 - Skript für ausführbares Paket erstellt
+- Fehlerbehandlung verbessert und Platzhalter entfernt
