Ensure clean shutdown and idle validation

--- a/todo.txt
+++ b/todo.txt
@@ -37,3 +37,4 @@
 - pre-commit mit black und ruff ergänzt
 - Skript für ausführbares Paket erstellt
 - Fehlerbehandlung verbessert und Platzhalter entfernt
+- Sicheres Beenden laufender Prozesse beim Schließen des Tools
