--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
 - Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
 - Sphinx-Dokumentation, Release-Workflow und Veröffentlichung auf PyPI
+- Weitere Tooltips vereinfachen und mit Beispielen ergänzen
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
@@ -45,3 +46,4 @@
 - Fehlerbehandlung verbessert und Platzhalter entfernt
 - Sicheres Beenden laufender Prozesse beim Schließen des Tools
 - CI-Pipeline um Linting, Testabdeckung und Security-Scan erweitert
+- Tooltip 'Bilder wählen' um Hinweis auf Dateifenster erweitert
