Add help path and clarify auto-pair tooltip

--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,11 @@
 ## Offene Aufgaben
 // Architektur & Erweiterungen
 - Modularisierung und Design-Patterns (z.B. Fassade, Observer)
-- API-Schicht zur Trennung von GUI und Logik
 - Persistente Ablage mit SQLite oder PostgreSQL samt Transaktionen und Caching
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
 - Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
 - Sphinx-Dokumentation, Release-Workflow und Veröffentlichung auf PyPI
+- AppImage für Linux erstellen
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
@@ -45,3 +45,9 @@
 - Fehlerbehandlung verbessert und Platzhalter entfernt
 - Sicheres Beenden laufender Prozesse beim Schließen des Tools
 - CI-Pipeline um Linting, Testabdeckung und Security-Scan erweitert
+- Tooltip 'Bilder wählen' um Hinweis auf Dateifenster erweitert
+- Tooltip 'Audios wählen' um Hinweis auf Dateifenster erweitert
+- API-Schicht zur Trennung von GUI und Logik (Grundstruktur)
+- Hilfetexte ausgelagert
+- Verzeichnisstruktur für Daten, Konfiguration, Hilfe und Archiv vervollständigt
+- Tooltip 'Auto-Paaren' mit Hinweis auf automatische Zuordnung erweitert
