--- a/todo.txt
+++ b/todo.txt
@@ -3,11 +3,10 @@
 ## Offene Aufgaben
 // Architektur & Erweiterungen
 - Modularisierung und Design-Patterns (z.B. Fassade, Observer)
-- API-Schicht zur Trennung von GUI und Logik
 - Persistente Ablage mit SQLite oder PostgreSQL samt Transaktionen und Caching
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
 - Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
-- Sphinx-Dokumentation, Release-Workflow und Veröffentlichung auf PyPI
+- Release-Workflow und Veröffentlichung auf PyPI
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
@@ -45,3 +44,5 @@
 - Fehlerbehandlung verbessert und Platzhalter entfernt
 - Sicheres Beenden laufender Prozesse beim Schließen des Tools
 - CI-Pipeline um Linting, Testabdeckung und Security-Scan erweitert
+- Sphinx-Dokumentation Grundgerüst angelegt
+- API-Schicht für ffmpeg-Aufruf erstellt
