--- a/todo.txt
+++ b/todo.txt
@@ -2,10 +2,11 @@
 
 ## Offene Aufgaben
 // Architektur & Erweiterungen
-- Persistente Ablage mit SQLite oder PostgreSQL samt Transaktionen und Caching
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
 - Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
 - Sphinx-Dokumentation vervollständigen
+// Datenhaltung
+- Persistente Ablage auf SQLite migrieren und Transaktionen/Caching ergänzen
 ## Erledigte Aufgaben
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
@@ -59,3 +60,6 @@
 - Prüflogik in utils ausgelagert
 - Tooltip 'Bilder wählen' nennt unterstützte Formate
 - Release-Workflow und Veröffentlichung auf PyPI
+- Automatisches Speichern und Laden der Projekte als JSON
+- Weitere Button-Kurzinfos ins Hilfemodul ausgelagert
+- Release-Skript führt Tests aus
