--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,6 @@
 ## Offene Aufgaben
 // Architektur & Erweiterungen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
-- Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
-- Sphinx-Dokumentation vervollständigen
 ## Erledigte Aufgaben
 - Transaktionen und Caching für SQLite ergänzen
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
@@ -20,6 +18,7 @@
 - Vollautomatische Prüfungen einbauen
 - Selbstreparatur einbauen
 - Komplett autonome Startprüfung mit autonomer, automatischer Korrektur von Problemen mit Nutzerfeedback
+- GUI-Startdatei mit automatischer Abhängigkeitsprüfung und Reparatur erstellt
 - System Leistung und Ram schützen und Ressourcen schonen
 - Partabilität, Linuxkonforme Funktionen oder Ausgaben
 - grafische Interaktivität immer über Buttons oder Auswahldialoge
@@ -65,3 +64,5 @@
 - Dateiauswahldialoge über Hilfsfunktion vereinheitlicht
 - Tooltip 'Pfad zeigen' erklärt den Speicherort
 - Persistente Ablage auf SQLite migriert
+- Sphinx-Dokumentation vervollständigen
+- Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
