improve ffmpeg error handling

--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@
 - Gruppen-Kalender und CalDAV-Synchronisation umsetzen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
 - SQLite-Cache invalidieren, wenn Datenbank extern geändert wird
+- CLI-Exit-Codes vereinheitlichen, damit Fehler korrekt gemeldet werden
 
 ## Erledigte Aufgaben
 - Transaktionen und Caching für SQLite ergänzen
@@ -73,3 +74,4 @@
 - Moderne Oberfläche als Web-Frontend oder CLI/TUI mit Hilfefunktion
 - Verzeichnisse werden nicht mehr beim Import von config.paths angelegt; Erstellung erfolgt bei Bedarf
 - SQLite-Verbindung mit Lock threadsicher gemacht
+- FFmpeg-Fehlerbehandlung verbessert und CLI nutzt zentrale ffmpeg-Funktionen
