--- a/todo.txt
+++ b/todo.txt
@@ -5,6 +5,7 @@
 - Alarme für Termine ergänzen
 - Gruppen-Kalender und CalDAV-Synchronisation umsetzen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
+- Docstrings für verbleibende Funktionen ergänzen
 
 ## Erledigte Aufgaben
 - Transaktionen und Caching für SQLite ergänzen
@@ -75,3 +76,4 @@
 - FFmpeg-Fehlerbehandlung verbessert und CLI nutzt zentrale ffmpeg-Funktionen
 - CLI-Exit-Codes vereinheitlicht
 - SQLite-Cache wird bei externen Änderungen invalidiert
+- Docstrings für CLI- und GUI-Helfer ergänzt
