--- a/todo.txt
+++ b/todo.txt
@@ -5,7 +5,6 @@
 - Alarme für Termine ergänzen
 - Gruppen-Kalender und CalDAV-Synchronisation umsetzen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Alarme, Gruppen-Kalender und CalDAV-Synchronisation
-- Docstrings für verbleibende Funktionen ergänzen
 
 ## Erledigte Aufgaben
 - Transaktionen und Caching für SQLite ergänzen
@@ -77,3 +76,5 @@
 - CLI-Exit-Codes vereinheitlicht
 - SQLite-Cache wird bei externen Änderungen invalidiert
 - Docstrings für CLI- und GUI-Helfer ergänzt
+- Docstrings für verbleibende Funktionen ergänzt
+- Tests laufen automatisch über pre-commit (pytest)
