--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -5,13 +5,13 @@
 - Gruppen-Kalender und CalDAV-Synchronisation umsetzen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Gruppen-Kalender und CalDAV-Synchronisation
 // Release-Vorbereitung
-- Version in pyproject.toml aktualisieren
-- CHANGELOG prüfen und Version eintragen
 - Tests (pre-commit und pytest) vor Release ausführen
 - Release-Tag erstellen und Paket veröffentlichen
 
 ## Erledigte Aufgaben
 - Release-Prozess dokumentiert (docs/release.rst)
+- Version in pyproject.toml aktualisiert
+- CHANGELOG um Versionsabschnitt ergänzt
 - Transaktionen und Caching für SQLite ergänzen
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
