--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -5,10 +5,11 @@
 - Gruppen-Kalender und CalDAV-Synchronisation umsetzen
 - Kalenderfunktionen: vollständige iCal-Unterstützung, Gruppen-Kalender und CalDAV-Synchronisation
 // Release-Vorbereitung
-- Tests (pre-commit und pytest) vor Release ausführen
 - Release-Tag erstellen und Paket veröffentlichen
 
 ## Erledigte Aufgaben
+- Tests (pre-commit und pytest) vor Release ausgeführt
+- Sphinx-Dokumentation gebaut und geprüft
 - Release-Prozess dokumentiert (docs/release.rst)
 - Version in pyproject.toml aktualisiert
 - CHANGELOG um Versionsabschnitt ergänzt
