--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -2,12 +2,13 @@
 
 ## Offene Aufgaben
 // Architektur & Erweiterungen
-- Gruppen-Kalender und CalDAV-Synchronisation umsetzen
-- Kalenderfunktionen: vollständige iCal-Unterstützung, Gruppen-Kalender und CalDAV-Synchronisation
+- GUI um Gruppen-Kalender erweitern
+- CalDAV-Synchronisation robuster gegen Netzwerkfehler machen
 // Release-Vorbereitung
 - Release-Tag erstellen und Paket veröffentlichen
 
 ## Erledigte Aufgaben
+- Gruppen-Kalender und CalDAV-Synchronisation umgesetzt
 - Tests (pre-commit und pytest) vor Release ausgeführt
 - Sphinx-Dokumentation gebaut und geprüft
 - Release-Prozess dokumentiert (docs/release.rst)
