Avoid accidental iCal overwrite

--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -11,6 +11,7 @@
 - Tests (pre-commit und pytest) vor Release ausgeführt
 - Sphinx-Dokumentation gebaut und geprüft
 - Release-Prozess dokumentiert (docs/release.rst)
+- iCal-Export überschreibt vorhandene Dateien nur mit --force
 - Dokumentation um Grundfunktionen für Einsteiger erweitert
 - Version in pyproject.toml aktualisiert
 - CHANGELOG um Versionsabschnitt ergänzt
