docs: outline caldav sync

--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -2,8 +2,8 @@
 
 ## Offene Aufgaben
 // Architektur & Erweiterungen
-- Gruppen-Kalender und CalDAV-Synchronisation umsetzen
-- Kalenderfunktionen: vollständige iCal-Unterstützung, Gruppen-Kalender und CalDAV-Synchronisation
+- Konflikte bei CalDAV-Synchronisation automatisch auflösen
+- Kalenderfunktionen: vollständige iCal-Unterstützung und Gruppen-Kalender
 - Logrotation für das zentrale Logging ergänzen
 
 ## Erledigte Aufgaben
@@ -39,6 +39,7 @@
 - Ausgaben von FFmpeg unterdrückt, spart Speicher
 - requirements.txt und pyproject.toml angelegt
 - Alarme für Termine ergänzen
+- Persistente UID und CalDAV-Konfliktprüfung implementiert
 - Lizenzdatei hinzugefügt
 - Gemeinsame Hilfsfunktionen in utils.py ausgelagert (Modularisierung)
 - README mit Installationshinweisen erweitert
