Add CalDAV conflict dialog and update roadmap

--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -2,8 +2,8 @@
 
 ## Offene Aufgaben
 // Architektur & Erweiterungen
-- Gruppen-Kalender und CalDAV-Synchronisation umsetzen
-- Kalenderfunktionen: vollständige iCal-Unterstützung, Gruppen-Kalender und CalDAV-Synchronisation
+- Gruppen-Kalender weiter ausbauen
+- Automatische Konfliktauflösung und vollständige CalDAV-Synchronisation
 - Logrotation für das zentrale Logging ergänzen
 
 ## Erledigte Aufgaben
@@ -23,6 +23,7 @@
 - Komplett autonome Startprüfung mit autonomer, automatischer Korrektur von Problemen mit Nutzerfeedback
 - GUI-Startdatei mit automatischer Abhängigkeitsprüfung und Reparatur erstellt
 - iCal-Export für CLI-Termine ergänzt
+- Konflikt-Dialog für CalDAV-Synchronisation ergänzt
 - System Leistung und Ram schützen und Ressourcen schonen
 - Partabilität, Linuxkonforme Funktionen oder Ausgaben
 - grafische Interaktivität immer über Buttons oder Auswahldialoge
