--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -17,6 +17,7 @@
 - Version in pyproject.toml aktualisiert
 - CHANGELOG um Versionsabschnitt ergänzt
 - GUI prüft Gruppenfeld und zeigt Tooltips für Eingabefelder und Buttons
+- Monatsübersicht in GUI integriert
 - Transaktionen und Caching für SQLite ergänzen
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
