--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -18,6 +18,7 @@
 - CHANGELOG um Versionsabschnitt ergänzt
 - GUI prüft Gruppenfeld und zeigt Tooltips für Eingabefelder und Buttons
 - Monatsübersicht in GUI integriert
+- Monatsübersicht erlaubt Navigation zu anderen Monaten
 - Transaktionen und Caching für SQLite ergänzen
 - Datei fortschritt.txt anlegen und fortlaufend ergänzen
 - plan.md angelegt
