--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -14,6 +14,7 @@
 - GUI ermöglicht Löschen von Terminen und meldet Ergebnis der Synchronisation
 - Logrotation für das zentrale Logging ergänzt
 - Syntaxfehler in CLI, GUI und Tests behoben und Testlauf wiederhergestellt
+- Synchronisations-URL in GUI einstellbar und Ergebnis wird als Meldung angezeigt
 - Gruppen-Kalender und CalDAV-Synchronisation umgesetzt
 - GUI um Gruppen-Kalender erweitert
 - CalDAV-Synchronisation robuster gegen Netzwerkfehler gemacht
