Use timezone-aware UTC timestamps

--- a/docs/roadmap/todo.txt
+++ b/docs/roadmap/todo.txt
@@ -4,7 +4,6 @@
 // Architektur & Erweiterungen
 - Gruppen-Kalender weiter ausbauen
 - Automatische Konfliktauflösung und vollständige CalDAV-Synchronisation
-- Konflikte bei CalDAV-Synchronisation automatisch auflösen
 - Kalenderfunktionen: vollständige iCal-Unterstützung und Gruppen-Kalender
 // Release-Vorbereitung
 - Release-Tag erstellen und Paket veröffentlichen
@@ -15,6 +14,7 @@
 - Logrotation für das zentrale Logging ergänzt
 - Syntaxfehler in CLI, GUI und Tests behoben und Testlauf wiederhergestellt
 - Synchronisations-URL in GUI einstellbar und Ergebnis wird als Meldung angezeigt
+- Zeitstempel nutzen timezone-aware datetime.now(UTC) statt veraltetem utcnow()
 - Gruppen-Kalender und CalDAV-Synchronisation umgesetzt
 - GUI um Gruppen-Kalender erweitert
 - CalDAV-Synchronisation robuster gegen Netzwerkfehler gemacht
